// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AnonymousAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-jjxMLt brd-c-jjxMLt-hECRKn-shape-circle brd-c-jjxMLt-kRzPmM-size-md brd-c-jjxMLt-euTbep-default-true brd-c-jjxMLt-iPJLV-css"
  >
    <i
      data-testid="mock-icon-User"
    />
  </span>
</div>
`;

exports[`Avatar Basic should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-jjxMLt brd-c-jjxMLt-hECRKn-shape-circle brd-c-jjxMLt-kRzPmM-size-md brd-c-jjxMLt-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;

exports[`Avatar ImageAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-jjxMLt brd-c-jjxMLt-hECRKn-shape-circle brd-c-jjxMLt-kRzPmM-size-md brd-c-jjxMLt-iPJLV-css"
  >
    <img
      alt="John Smith Avatar"
      src="https://i.pravatar.cc/150?img=42"
    />
  </span>
</div>
`;

exports[`Avatar SquareAvatar should match the snapshot 1`] = `
<div>
  <span
    class="brd-c-jjxMLt brd-c-jjxMLt-liDPBl-shape-square brd-c-jjxMLt-bFVlRr-size-lg brd-c-jjxMLt-ibCEZhf-css"
  >
    <span>
      JS
    </span>
  </span>
</div>
`;
